# impulsegpt

./: .gitignore  README.md  bpe_tokenizer.ipynb  char_tokenizer.py  experiments.ipynb  generate.ipynb  impulsegpt.ipynb  impulsegpt.py  impulsegpt_sdpa.py  main.py  pyproject.toml  trainer.ipynb
.ipynb_checkpoints/: experiments-checkpoint.ipynb  impulsegpt-checkpoint.ipynb  tester-checkpoint.ipynb
